# CaSCAD

./: .gitignore  Makefile  Makefile.am  Makefile.bak  Makefile.in  ast.c  ast.h  cascad  config.status  configure  configure.ac  configure.scan  configure~  lexer.h  lexer.l  lib.c  lib.h  libtool  main.c  parser.tab.c  parser.y  strutils.c  strutils.h  test.scad  test2.scad  tree.c  tree.h  y.tab.h
Mechanism/: Gear equation  basic_functions.scad  bearing.stl  bevel_gear_test.stl  cycloid_gear_profile.scad  cycloid_gear_types.scad  extreme_gearing_test.stl  gear_bearing.scad  involute_gear_profile.scad  involute_gear_types.scad  mesh_bevel_gear.scad  mesh_parallel_gear.scad  metric_bolt.scad  octoid_gear_profile.scad  octoid_gear_types.scad  test.scad
Mechanism/control/: control.scad  control_piece_1.stl  control_piece_11.stl
Mechanism/elbow1/: elbow.scad  elbow_piece_3.stl  elbow_piece_4.stl  elbow_piece_5.stl
Mechanism/old/: bearing.scad  octoid_gears.scad  octoid_spiral_gears.scad
Old/: vector.h
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h  backend.h  builtin.c  builtin.h  cascad  cascad.h  compiler.c  compiler.h  config.h  config.h.in  config.h.in~  context.h  deps.c  deps.h  frontend.h  gui.c  gui.h  interpreter.c  interpreter.h  lexer.c  lexer.h  lexer.l  lib.c  main.c  parser.c  parser.h  parser.y  parser_interface.h  resources.h  strutils.c  strutils.h  tree.c  tree.h
src/.deps/: ast.Po  builtin.Po  compiler.Po  deps.Po  gui.Po  interpreter.Po  lexer.Po  lib.Po  main.Po  parser.Po  strutils.Po  tree.Po
src/backend/: occt-gl.cpp  occt.cpp
src/backend/.deps/: occt-gl.Po  occt.Po
src/frontend/: gl4.c  glad.c  glad.h  glad.txt  gtk4.c
src/frontend/.deps/: gl4.Po  glad.Po  gtk4.Po
src/resources/: render.c  stl.c
src/resources/.deps/: render.Po  resources.Po  stl.Po
test/: arguments  arguments.scad  arguments2  assignment  assignment.scad  builtin  builtin.scad  definition  definition.scad  empty  import  import.scad  import_helper.scad  lambda  lambda.scad  module  module.scad  rotate  rotate.scad  test.sh  thing.stl  translate  translate.scad  vector  vector.scad
